# lambdanator

./: .gitignore  README.md  pyproject.toml
lambdanator/: __init__.py  __main__.py  bot.py
lambdanator/extensions/: __init__.py  emote_manager.py  meta.py
lambdanator/extensions/emote_manager/: emote_manager.py
lambdanator/extensions/emote_manager/utils/: archive.py  errors.py
lambdanator/extensions/gamer_words/: __init__.py  constants.py  gamer_words.py
