[tool.poetry]
name = "lambdanator"
version = "0.2.2"
description = "combination of lambda bots"
authors = ["StarrFox <starrfox6312@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
humanize = "^4.3.0"
toml = "^0.10.2"
Wand = "^0.6.10"
Unidecode = "^1.3.4"
loguru = "^0.6.0"

[tool.poetry.group.discord.dependencies]
"discord.py" = "^2.0.1"
jishaku = "^2.5.1"
# jishaku memory usage feature
psutil = "^5.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
